--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "apollo-server": "^3.3.0",
     "apollo-server-core": "^3.3.0",
+    "dotenv": "^10.0.0",
     "graphql": "^15.5.3",
     "mongoose": "^6.0.6"
   }
